--- a/index.html
+++ b/index.html
@@ -9,31 +9,25 @@
 <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-info">
+<body>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
+      <h1>sahabuddin akando</h1>
+      <a href="#" class="btn btn-primary" onclick="myfunction()"> click me</a>
 
-             <div class="main_one_start">
-              <span><a href="#" class="btn btn-primary d-inline-block d-lg-none" onclick="myfunction()"> rasel</a></span>
-              <ul class="pt-5" id="me">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">other</a></li>
-                <li><a href="#">country</a></li>
-                <li><a href="#">etc</a></li>
-              </ul>
-             </div>
-
-
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et cumque at modi dolorum quas sint enim, rem officia inventore in quae numquam, assumenda ea ut dolore nostrum porro vel accusantium harum aspernatur. Rerum error nihil asperiores natus debitis rem. Culpa nostrum eos ab, voluptatem alias magnam inventore corrupti vel debitis id dolore eius velit fuga, rem modi reiciendis reprehenderit quasi magni delectus sit saepe? Voluptas, fuga. Rerum commodi assumenda obcaecati voluptatem beatae aperiam iure perferendis suscipit ad eius soluta eum culpa incidunt cupiditate officiis quod, ut, odio eos ea nam quaerat atque. Corporis necessitatibus doloribus quasi. Quisquam quod totam in, reprehenderit autem vel maiores voluptate, architecto odit saepe voluptatem sit eligendi repellendus rerum aliquid consequatur. Aperiam voluptatibus incidunt iusto veniam eos perspiciatis amet repudiandae maxime porro ut expedita vitae nam odit enim sed alias saepe labore ipsum debitis recusandae possimus hic, iure facere repellat! Consectetur voluptates, eligendi magni ut ex sapiente aperiam assumenda fuga. Dolor expedita adipisci quam error illo corporis tempore minus eveniet delectus distinctio! Deserunt itaque sit sint repudiandae ducimus, provident animi eligendi officiis modi quas veritatis quidem porro aspernatur vel ipsum, alias perspiciatis possimus nobis totam natus ex nisi? Quam, ullam nulla amet excepturi dicta, error ut assumenda corporis reiciendis delectus at doloribus voluptatem autem dolorem perspiciatis nam animi eaque vero eum minus pariatur consectetur! Est, aliquam incidunt? Maiores libero ipsa labore maxime natus laudantium dolores voluptate tempore vel voluptatum commodi inventore nemo suscipit vitae error dolorem fugit, temporibus ut asperiores minus. Tenetur necessitatibus tempore impedit nulla culpa veritatis expedita dolore possimus enim esse? Atque illum a eos eligendi earum ducimus. Quod, sunt quibusdam amet a sequi suscipit fuga nemo aut perferendis itaque modi ipsa praesentium doloribus blanditiis iusto sint odio maxime? Velit similique est soluta consequatur debitis quo neque, rerum aspernatur molestias deserunt ut. Asperiores, porro!</p>
-          </div>
-        </div>
-      </div>
-
-  <script src="a.js"></script>
-
+      <script>
+       function myfunction(){
+        var i=0;
+        var y=setInterval(uu,300);
+        function uu(){
+          document.write("sahabuddin "+ i+++"</br>");
+          if(i == 20){
+            alert("next step is close");
+          } else if(i==21){
+            clearInterval(y);
+          }
+        }
+       }
+      </script>
       <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
