--- a/index.html
+++ b/index.html
@@ -11,23 +11,41 @@
 </head>
 <body>
 
-      <h1>sahabuddin akando</h1>
-      <a href="#" class="btn btn-primary" onclick="myfunction()"> click me</a>
+  <a href="#" class="btn btn-primary clickme my-3">Click Me</a>
+  <div class="rasel">
+    <div class="mid-rasel">
 
-      <script>
-       function myfunction(){
-        var i=0;
-        var y=setInterval(uu,300);
-        function uu(){
-          document.write("sahabuddin "+ i+++"</br>");
-          if(i == 20){
-            alert("next step is close");
-          } else if(i==21){
-            clearInterval(y);
-          }
+    </div>
+  </div>
+
+
+  <script>
+    var clickme=document.querySelectorAll(".clickme")[0];
+    var a=document.querySelectorAll(".rasel")[0];
+      var b=document.querySelectorAll(".mid-rasel")[0];
+    clickme.addEventListener("click",myfunction);
+
+    function myfunction(){
+      var pos=0;
+      var animation = setInterval(start,10);
+
+      function start(){
+
+        if(pos==500){
+          clearInterval(animation);
+          b.style.marginTop="0px";
+          clearInterval(animation);
+        }else{
+          pos++;
+          b.style.marginLeft=pos+"px";
+          b.style.marginTop="200px";
+          b.style.transition="all 0.7s";
         }
-       }
-      </script>
+      }
+    }
+    // console.log(clickme);
+
+  </script>
       <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
