--- a/index.html
+++ b/index.html
@@ -5,47 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
- 
 <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <a href="#" class="btn btn-primary clickme my-3">Click Me</a>
-  <div class="rasel">
-    <div class="mid-rasel">
-
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="abc">
+          <img src="../images/aniversary1.jpg" alt="">
+          <!-- <img src="images/advisory2.webp" alt=""> -->
+        </div>
+      </div>
     </div>
   </div>
 
-
+ 
   <script>
-    var clickme=document.querySelectorAll(".clickme")[0];
-    var a=document.querySelectorAll(".rasel")[0];
-      var b=document.querySelectorAll(".mid-rasel")[0];
-    clickme.addEventListener("click",myfunction);
+    let person = {
+    firstName: 'John',
+    lastName: 'Doe'
+};
 
-    function myfunction(){
-      var pos=0;
-      var animation = setInterval(start,10);
-
-      function start(){
-
-        if(pos==500){
-          clearInterval(animation);
-          b.style.marginTop="0px";
-          clearInterval(animation);
-        }else{
-          pos++;
-          b.style.marginLeft=pos+"px";
-          b.style.marginTop="200px";
-          b.style.transition="all 0.6s";
-        }
-      }
-    }
-    // console.log(clickme);
-
+(function () {
+    console.log(person.firstName+ ' ' + person.lastName);
+})();
   </script>
-      <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
