--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 </head>
 <body>
 
+<section>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="abc">
-          <img src="../images/aniversary1.jpg" alt="">
-          <!-- <img src="images/advisory2.webp" alt=""> -->
-        </div>
+        <h1>sahabuddin akndo</h1>
+        <p>kolkata is best</p>
       </div>
     </div>
   </div>
-
+</section>
  
   <script>
     let person = {
